--- a/trabajoIntegrador/views/index.ejs
+++ b/trabajoIntegrador/views/index.ejs
@@ -90,7 +90,7 @@
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product">
+					<a href="product/id/1">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -150,12 +150,12 @@
 		</div>
 	</div>
 	<!-- /Novedades -->
-	<!-- Más comentados -->
+	<!-- Más comentados-->
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
 				<h2 class="products-title">Más comentados</h2>
-			</div>
+			</div> 
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
@@ -211,10 +211,29 @@
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
+					
+				</div>
 				</section>
-			</div>
+			
+				----------------------------------------------------------------------------------------------
+		<!--	<%// for( let i = 0; i < productosMain.length; i++ ) { %>
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="product/id/<%=//productosMain[i].id%>">
+							<figure class="product-box_image">
+								<img src=<%=//productosMain[i].imagen %> alt="cafetera moulinex">
+							</figure>
+						<article class="product-box_data">
+							<h2><%=//productosMain[i].nombre %></h2>
+							<p><%=//productosMain[i].descripcion %></p>
+							<p>Comentarios: 12</p>
+						</article>
+						</a>
+					</section>
+				</div>
+			<% //} %>
 		</div>
-	</div>
+	</div>-->
 	<!-- /Más comentados -->
 
 
