--- a/trabajoIntegrador/views/index.ejs
+++ b/trabajoIntegrador/views/index.ejs
@@ -7,7 +7,7 @@
 	<!-- Header -->
 	<%- include('./partials/header') %>
 	<!-- /Header -->
-	
+	<main>
 	<!-- Banner -->
 	<div class="banner">
 		<img src="images/img-home-banner.jpg" alt="Banner de ofertas">
@@ -68,7 +68,7 @@
 		</div>
 	</div>
 	<!-- /Más comentados -->
-
+	</main>
 
 	<!-- footer -->
 	<%- include('./partials/footer') %>
