--- a/trabajoIntegrador/views/login.ejs
+++ b/trabajoIntegrador/views/login.ejs
@@ -16,13 +16,22 @@
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de login. <br>
+			<!-- <h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de login. <br>
 			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
 			Eliminen estás líneas y coloquen el formulario. <br>
 			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
 			////////////////
-			</h2>
-
+			</h2> -->
+			<section class="login">
+				<form action="" method="get">
+				<input type="email" name="email" placeholder="Email" id="">
+				<input type="password" name="contrasenia" placeholder="Contraseña" id="">
+				</form>
+				<form action="" method="get">
+					<h3>¿Queres que te recordemos? <input type="checkbox" name="recordame" id=""></h3>
+				</form>
+				<p class="ingresar"><button type="submit">Ingresar</button></p>
+			</section>
 		</main>
 	<!-- footer -->
 	<%- include('./partials/footer') %>
