--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -25,21 +25,20 @@
 			<div>
 				<div>
 				  <h2> Registrate! </h2>
-				<form action="/profile/register" method="get">
-					<input type="text" name="nombre" placeholder="Nombre">
-					<br>
-					<input type="text" name="apellido" placeholder="Apellido">
-					<br>
-					<input type="number" name="documento" placeholder="Número de Documento">
-					<br>
-					<input type="text" name="email" placeholder="Email">
-					<br>
-					<input type="password" name="contrasena" placeholder="Contraseña">
-					<br>
-					<label for="profilePic"> Elija una foto de perfil</label>
-					<input type="file" name="imgPerfil" placeholder= "Imagen de Perfil" value="">
+				<form action="" method="get">
+					<input type="email" name="email" placeholder="Email">
 					<hr>
-					<input type="submit" value="Register">
+					<input type="text" name="usuario" placeholder="Usuario">
+					<hr>
+					<input type="password" name="contrasena" placeholder="Contraseña">
+					<hr>
+					<input type="date" name="fechaDeNacimiento" placeholder="Fecha de Nacimiento">
+					<hr>
+					<input type="number" name="documento" placeholder="Número de Documento">
+					<hr>
+					<input type="text" name="fotodeperfil" placeholder="Foto de Perfil">
+					<hr>
+					<p class="ingresar"><button type="submit">Ingresar</button></p>
 				  </form>
 		
 				</div>
