--- a/trabajoIntegrador/views/index.ejs
+++ b/trabajoIntegrador/views/index.ejs
@@ -10,7 +10,7 @@
 	<main>
 	<!-- Banner -->
 	<div class="banner">
-		<img src="images/img-home-banner.jpg" alt="Banner de ofertas">
+		<img src="images/banner.png" alt="Banner de ofertas">
 	</div>
 	<!-- /Banner -->
 
@@ -26,12 +26,12 @@
 					<section class="product-box">
 						<a href="product/id/<%=productosMain[i].id%>">
 							<figure class="product-box_image">
-								<img src=<%=productosMain[i].imagen %> alt="cafetera moulinex">
+								<img src=<%=productosMain[i].imagen %> alt="">
 							</figure>
 						<article class="product-box_data">
 							<h2><%=productosMain[i].nombre %></h2>
 							<p><%=productosMain[i].descripcion %></p>
-							<p>Comentarios: 12</p>
+							<p>Comentarios: 5</p>
 						</article>
 						</a>
 					</section>
@@ -58,7 +58,7 @@
 						<article class="product-box_data">
 							<h2><%=productosMain[i].nombre %></h2>
 							<p><%=productosMain[i].descripcion %></p>
-							<p>Comentarios: 12</p>
+							<p>Comentarios: 5</p>
 						</article>
 						</a>
 					</section>
