--- a/trabajoIntegrador/views/partials/headerLogueado.ejs
+++ b/trabajoIntegrador/views/partials/headerLogueado.ejs
@@ -1,10 +1,10 @@
 <!-- Header -->
 <header class="main-header">
 	<div class="container">
-		<div class="row align-items-center">
+		<div class="row align-items-center containerHeader">
 			<div class="col-5 col-md-2">
 				<a href="/" class="main-header_home-link">
-					<img src="/images/logo-mercado-liebre.svg">
+					<img src="/images/logo.png">
 				</a>
 			</div>
 
@@ -14,46 +14,33 @@
 					<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 				</form>
 			</div>
-
-			<div class="col-12 col-md-4">
-				<a class="main-header_credit-link">
-					<i class="fas fa-hand-holding-usd"></i>
-					Todas las opiniones en un solo lugar.
-				</a>
-			</div>
 		</div>
 
 		<button class="btn-toggle-navbar">
 			<i class="fas fa-bars"></i>
 		</button>
 
-		<nav class="main-navbar">
-			<ul class="left-navbar">
-				<li><a href="/">Todos los productos</a></li>
-				<li><a href="product-add.html">Cargar productos</a></li> <!-- cambiar -->
-			</ul>
-
-			<ul class="right-navbar">
-				<li><a href="/profile"> <!-- cambiar -->
-						Nombre del usuario <i class="fas fa-user"></i>
+		<nav  ><!--  -->
+			<ul class="listaLogueado">
+				<li class="perfil">
+					<a href="/profile"> <!-- cambiar -->
+						<img class="imgPerfil" src=<%= profile.foto_perfil %> alt="">
+						<%= profile.usuario %>
 					</a>
 				</li>
-				<li>
+				<li class="login">
 					<form action="" method="post">
 						<button class="logout" type="submit">
-							Cerrar sesión <i class="fas fa-sign-in-alt"></i>
+							Log out
 						</button>
 					</form>
 				</li>
-				<!-- Solo deslogueado <li>
-					<a href="register.html">Creá tu cuenta <i class="far fa-address-card"></i>
-					</a>
-				</li>
-				<li>
-					<a href="login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-				</li> -->
 			</ul>
 		</nav>
 	</div>
+	<ul class="left-navbar">
+		<li><a href="/">Todos los productos</a></li>
+		<li><a href="/product/add">Cargar productos</a></li> <!-- cambiar -->
+	</ul>
 </header>
 <!-- /Header -->
