--- a/trabajoIntegrador/views/product.ejs
+++ b/trabajoIntegrador/views/product.ejs
@@ -8,7 +8,7 @@
 	<!-- /Header -->
  <main>
 	<!-- product detail -->
-	<div class="container products-wrapper">
+	<div class="containerProducts products-wrapper">
 		<div class="d-flex align-items-center">
 			<h2 class="products-title"><%= informacionProducto[0].nombre %></h2> 
 			<p class="product-detail-description">
