--- a/trabajoIntegrador/views/partials/header.ejs
+++ b/trabajoIntegrador/views/partials/header.ejs
@@ -13,43 +13,32 @@
                     <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
                 </form>
             </div>
-
+        </div>    
             <!-- <div class="col-12 col-md-4">
                 <a class="main-header_credit-link">
                     <i class="fas fa-hand-holding-usd"></i>
                     Todas las opiniones en un solo lugar.
                 </a>
             </div> -->
+
+            <button class="btn-toggle-navbar">
+                <i class="fas fa-bars"></i>
+            </button>
+        <nav>
             <ul class="right-navbar">
-                <!-- Solo logueado <li><a href="profile.ejs">
-                        Nombre del usuario <i class="fas fa-user"></i>
-                    </a>
-                </li>
-                <li>
-                    <form action="" method="post">
-                        <button class="logout" type="submit">
-                            Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-                        </button>
-                    </form>
-                </li> -->
                 <li >
-                    <a href="/register">Sign in <!-- <i class="far fa-address-card"></i> -->
+                    <a href="/register">Sign in 
                     </a>
                 </li>
                 <li class="login">
-                    <a href="/login">Log in <!-- <i class="fas fa-sign-in-alt"></i> --></a>
+                    <a href="/login">Log in </a>
                 </li>
             </ul>
-        </div>
-
-        <button class="btn-toggle-navbar">
-            <i class="fas fa-bars"></i>
-        </button>
+        </nav>
     </div>
     <nav class="main-navbar">
         <ul class="left-navbar">
             <li><a href="/">Todos los productos</a></li>
-            <!-- solo logueado <li><a href="">Cargar productos</a></li> -->
         </ul>
     </nav>
 </header>
