--- a/trabajoIntegrador/views/partials/headerLogueado.ejs
+++ b/trabajoIntegrador/views/partials/headerLogueado.ejs
@@ -1,4 +1,3 @@
-<!-- Header -->
 <header class="main-header">
 	<div class="container">
 		<div class="row align-items-center containerHeader">
@@ -9,7 +8,7 @@
 			</div>
 
 			<div class="col-7 col-md-6">
-				<form action="" method="GET" class="search-form">
+				<form action="/search-results" method="GET" class="search-form">
 					<input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
 					<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 				</form>
@@ -20,14 +19,14 @@
 			<i class="fas fa-bars"></i>
 		</button>
 
-		<nav  ><!--  -->
+		<nav>
 			<ul class="listaLogueado">
 				<li class="perfil">
-					<a href="/profile"> <!-- cambiar -->
+					<a href="/profile"> 
 						<img class="imgPerfil" src=<%= profile.foto_perfil %> alt="">
 						<%= profile.usuario %>
 					</a>
-				</li>
+				</li> 
 				<li class="login">
 					<form action="" method="post">
 						<button class="logout" type="submit">
@@ -40,7 +39,7 @@
 	</div>
 	<ul class="left-navbar">
 		<li><a href="/">Todos los productos</a></li>
-		<li><a href="/product/add">Cargar productos</a></li> <!-- cambiar -->
-	</ul>
+		<li><a href="/product/add">Cargar productos</a></li> 
+	</ul> 
 </header>
 <!-- /Header -->
