--- a/trabajoIntegrador/views/login.ejs
+++ b/trabajoIntegrador/views/login.ejs
@@ -4,43 +4,42 @@
 
 <%- include('./partials/head') %>
 
-<body>
+<body class="bodyLog">
 	<!-- Header -->
 	<%- include('./partials/header') %>
 	<!-- /Header -->
 	<main class="mainLog">
-		<!-- Novedades -->
+
 		<h1 class="products-title">¡Que lindo verte de nuevo!      <i class="fa-regular fa-face-grin-beam  fa-xs" style="color: var(--gray);"></i> </h1>
 	
 		<div class="products-wrapper containerLog">
 			<div class="row">
 				<div class="col-12">
-					<h2 class="products-title">Log in</h2>
+					<h2 class="products-title titleLog">Log in</h2>
 				</div>
-				<!-- Show the "ultimos" products -->
-				<section class="sectionLog">
 					
-					<form action="" method="get" class="formLog">
-						<div class="inputForm">
-						<i class="fa-solid fa-envelope icon"></i>
-						<input type="email" name="email" placeholder="ej. elonmusk@email.com" >
-						</div>
+				<form action="" method="get" class="formLog">
+					<div class="inputForm">
+					<i class="fa-solid fa-envelope fa-xl icon"></i>
+					<input type="email" name="email" placeholder="ej. elon@musk.com" >
+					</div>
 
-						<div class="inputForm">
-						<i class="fa-solid fa-lock icon"></i>
-						<input type="password" name="contrasenia" placeholder="ej. Ilovemangos123" >
-						</div>
+					<div class="inputForm">
+					<i class="fa-solid fa-lock fa-xl icon"></i>
+					<input type="password" name="contrasenia" placeholder="ej. Ilovemangos123" >
+					</div>
 
-						<p class="recordar">¿Queres que te recordemos? <input type="checkbox" name="recordame" class="inputForm"></p>
+					<button type="submit" class="ingresar">Ingresar</button>
 
-						<button type="submit" class="ingresar">Ingresar</button>
-					</form>
-					
-				</section>
+					<p class="recordar">¿Querés que te recordemos? <input type="checkbox" name="recordame" class="inputForm"></p>
+				</form>
 			</div>
 		</div>
 	</main>
 	<!-- footer -->
+	<section class="sectionLego">
+	<img src="/images/lego.png" class="lego" alt="">
+	</section>
 	<%- include('./partials/footer') %>
 	<!-- /footer -->
 </body>
