Modifique css de agregar productos y editar perfil

--- a/trabajoIntegrador/views/index.ejs
+++ b/trabajoIntegrador/views/index.ejs
@@ -31,7 +31,7 @@
 						<article class="product-box_data">
 							<h2><%=productosMain[i].nombre %></h2>
 							<p><%=productosMain[i].descripcion %></p>
-							<p>Comentarios: 5</p>
+							<p>Comentarios: <%= cantComentarios%></p>
 						</article>
 						</a>
 					</section>
