--- a/trabajoIntegrador/public/stylesheets/app.css
+++ b/trabajoIntegrador/public/stylesheets/app.css
@@ -519,7 +519,7 @@ textarea.form-input {
 .titleLog{
   color: #1f1d48;
 }
-input[type="email"], input[type="password"],input[type="date"],input[type="number"], .text{
+input[type="email"], input[type="password"],input[type="date"],input[type="number"],input[type="file"], .text{
   font-size: 10px;
   padding: 10px;
   border: none;
@@ -571,14 +571,11 @@ input[type="email"], input[type="password"],input[type="date"],input[type="numbe
 
 /*====== Sign in ======*/
 .containerReg{
-  background-color: rgba(255, 255, 255, 0.817);
-  box-shadow: 2px 2px 2px 2px rgba(55, 55, 55, 0.286);
-  box-shadow: 2px 2px 2px 2px #1f1d4862;
-  display: flex;
-  justify-content: center;
-  border-radius: 5%;
   height: 55vh;
-  
+}
+/*====== Profile edit ======*/
+.containerEdit{
+  height: 55vh;
 }
 /*====== Profile ======*/
 .info-usuario{
@@ -586,7 +583,15 @@ input[type="email"], input[type="password"],input[type="date"],input[type="numbe
   padding-bottom: 30px;
   font-size: 16px;
 }
-
+.cambios{
+  border: none;
+  padding: 10px 9vw;
+  border-radius: 10px;
+  color: white;
+  font-size: 15px;
+  background-color: #1f1d48;
+  cursor: pointer;
+}
 .foto-perfil{
   border-radius: 50%;
 }
