--- a/trabajoIntegrador/views/profile.ejs
+++ b/trabajoIntegrador/views/profile.ejs
@@ -51,7 +51,7 @@
 						<article class="product-box_data">
 							<h2><%=productos[i].nombre %></h2>
 							<p><%=productos[i].descripcion %></p>
-							<p>Comentarios: 5</p>
+							<p>Comentarios: <%= cantComentarios%></p>
 						</article>
 						</a>
 					</section>
