--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -12,7 +12,7 @@
 
 		<h1 class="products-title">¡Hola!      <i class="fa-regular fa-face-grin-beam  fa-xs" style="color: var(--gray);"></i> </h1>
 
-		<div class="products-wrapper containerReg">
+		<div class="products-wrapper containerLog containerReg ">
 			<div class="row">
 				<div class="col-12">
 					<h2 class="products-title titleLog">Sign in</h2>
