--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -17,39 +17,40 @@
 				<div class="col-12">
 					<h2 class="products-title titleLog">Sign in</h2>
 				</div>
+				<div>
+					<form action="" method="get" class="formLog">
+						<div class="inputForm">
+							<i class="fa-solid fa-envelope fa-xl icon"></i>
+							<input type="email" name="email" placeholder="Email">
+						</div>
 
-				<form action="" method="get" class="formLog">
-					<div class="inputForm">
-						<i class="fa-solid fa-envelope fa-xl icon"></i>
-						<input type="email" name="email" placeholder="Email">
-					</div>
+						<div class="inputForm">
+							<i class="fa-solid fa-user fa-xl icon"></i>
+							<input type="text" name="usuario" placeholder="Usuario" class="text">
+						</div>
 
-					<div class="inputForm">
-						<i class="fa-solid fa-user fa-xl icon"></i>
-						<input type="text" name="usuario" placeholder="Usuario" class="text">
-					</div>
+						<div class="inputForm">
+							<i class="fa-solid fa-lock fa-xl icon"></i>
+							<input type="password" name="contrasenia" placeholder="Contraseña">
+						</div>
 
-					<div class="inputForm">
-						<i class="fa-solid fa-lock fa-xl icon"></i>
-						<input type="password" name="contrasenia" placeholder="Contraseña">
-					</div>
+						<div class="inputForm">
+							<input type="date" name="fechaDeNacimiento" placeholder="Fecha de Nacimiento">
+						</div>
 
-					<div class="inputForm">
-						<input type="date" name="fechaDeNacimiento" placeholder="Fecha de Nacimiento">
-					</div>
+						<div class="inputForm">
+							<i class="fa-solid fa-address-card fa-xl icon"></i>
+							<input type="number" name="documento" placeholder="Número de Documento">
+						</div>
 
-					<div class="inputForm">
-						<i class="fa-solid fa-address-card fa-xl icon"></i>
-						<input type="number" name="documento" placeholder="Número de Documento">
-					</div>
+						<div class="inputForm">
+							<i class="fa-regular fa-image fa-xl icon"></i>
+							<input type="text" name="fotodeperfil" placeholder="Foto de Perfil" class="text">
+						</div>
 
-					<div class="inputForm">
-						<i class="fa-regular fa-image fa-xl icon"></i>
-						<input type="text" name="fotodeperfil" placeholder="Foto de Perfil" class="text">
-					</div>
-
-					<button type="submit" class="ingresar">Ingresar</button>
-				</form>
+						<button type="submit" class="ingresar">Ingresar</button>
+					</form>
+				</div>
 			</div>
 		</div>
 	</main>
