--- a/trabajoIntegrador/views/partials/header.ejs
+++ b/trabajoIntegrador/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <header class="main-header">
-    <div class="container">
+    <div class="conteinerHeader">
+        <div class="col-5 col-md-2">
+            <a href="/" class="main-header_home-link">
+                <img src="/images/logo.png">
+            </a>
+        </div>
         <div class="row align-items-center containerHeader">
-            <div class="col-5 col-md-2">
-                <a href="/" class="main-header_home-link">
-                    <img src="/images/logo.png">
-                </a>
-            </div>
 
             <div class="col-7 col-md-6">
                 <form action="/search-results" method="GET" class="search-form">
