--- a/trabajoIntegrador/views/search-results.ejs
+++ b/trabajoIntegrador/views/search-results.ejs
@@ -23,7 +23,7 @@
 		</main>
 
 	<!-- footer -->
-	<%- include('./partials/footer) %>
+	<%- include('./partials/footer') %>
 	<!-- /footer -->
 </body>
 
