arreglé register y login

--- a/trabajoIntegrador/views/login.ejs
+++ b/trabajoIntegrador/views/login.ejs
@@ -18,7 +18,7 @@
 					<h2 class="products-title titleLog">Log in</h2>
 				</div>
 					
-				<form action="" method="get" class="formLog">
+				<form action="/profile" method="get" class="formLog">
 					<div class="inputForm">
 						<i class="fa-solid fa-envelope fa-xl icon"></i>
 						<input type="email" name="email" placeholder="ej. elon@musk.com" >
