--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -18,7 +18,7 @@
 					<h2 class="products-title titleLog">Sign in</h2>
 				</div>
 				<div>
-					<form action="" method="get" class="formLog">
+					<form action="/login" method="get" class="formLog">
 						<div class="inputForm">
 							<i class="fa-solid fa-envelope fa-xl icon"></i>
 							<input type="email" name="email" placeholder="Email">
