header logeado arreglo log out

--- a/trabajoIntegrador/views/partials/headerLogueado.ejs
+++ b/trabajoIntegrador/views/partials/headerLogueado.ejs
@@ -28,7 +28,7 @@
 					</a>
 				</li> 
 				<li class="login">
-					<form action="" method="get">
+					<form action="/" method="get">
 						<button class="logout" type="submit">
 							Log out
 						</button>
