--- a/trabajoIntegrador/views/login.ejs
+++ b/trabajoIntegrador/views/login.ejs
@@ -31,10 +31,14 @@
 
 					<button type="submit" class="ingresar">Ingresar</button>
 
-					<p class="recordar">¿Querés que te recordemos? <input type="checkbox" name="recordame" class="inputForm"></p>
+					<div class="inputRecordar">
+					<p class="recordar">¿Querés que te recordemos? </p>
+					<input class="recordar" type="checkbox" name="recordame" class="inputForm">
+					</div>
 				</form>
 			</div>
 		</div>
+		<p class="recordar">¿No tenés un perfil? <a href="/register" class="crear">Creá uno</a></p>
 	</main>
 	<!-- footer -->
 	<section class="sectionLego">
