--- a/trabajoIntegrador/views/product-add.ejs
+++ b/trabajoIntegrador/views/product-add.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
-
 <%- include('./partials/head') %>
 <body>
 <%- include('./partials/headerLogueado') %>
@@ -14,7 +13,7 @@
 				<h2 class="products-title titleLog">Agregar productos</h2>
 			</div>
 
-			<form action="" method="get" class="formLog">
+			<form action="/" method="get" class="formLog">
 				<div class="inputForm">
 				<!-- <label for="producto"> Producto: </label> -->
 				<input type="text" name="producto" placeholder= "Nombre del producto" value="" class="text"> 
