--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -53,6 +53,7 @@
 				</div>
 			</div>
 		</div>
+		<p class="recordar">¿Ya tenés un perfil? <a href="/login" class="crear">Inicia sesión</a></p>
 	</main>
 	<!-- footer -->
 	<section class="sectionLego">
