--- a/trabajoIntegrador/views/profile-edit.ejs
+++ b/trabajoIntegrador/views/profile-edit.ejs
@@ -16,7 +16,7 @@
 					<h2 class="products-title titleLog">Editar mi perfil</h2>
 				</div>
 
-				<form action="" method="get" class="formLog">
+				<form action="/" method="get" class="formLog">
 					<div class="inputForm">
 						<i class="fa-solid fa-envelope fa-xl icon"></i>
 						<input type="email" name="email" placeholder="Email">
